Family: fix horizontal spacing in hero CTA (fixes #12691)

--- a/media/css/firefox/family/components/_hero.scss
+++ b/media/css/firefox/family/components/_hero.scss
@@ -79,6 +79,7 @@ $image-path: '/media/protocol/img';
 
         @media #{$mq-md} {
             display: flex; // allow logo to share same line as text
+            gap: $spacing-sm;
         }
     }
 
